# mmx-node

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  make_debug.cmd  make_release.cmd  update.cmd  vcpkg.json
.github/workflows/: build.yml  docker.yml  windows.yml
cmake/: use_cuda.cmake  win_pack.cmake
cmake/custom-triplets/: x64-windows-mmx.cmake
cmake/nsis/: NSIS.template.in
cmake/product_version/: generate_product_version.cmake
include/mmx/pos/: util.h
scripts/win/: activate.cmd  run_exch_server.cmd  run_node.cmd
src/: Node_verify.cpp  Router.cpp
ui/: .gitignore  .prettierrc.js  eslint.config.js  i18n_plan.md  jsconfig.json  package.json  projectBrief.md  tsconfig.json  vite.ConfigBuilder.js  vite.config.explorer.js  vite.config.js  wxt.config.js
ui/.roo/optional/: i18n-patterns.md
ui/.roo/rules/: 10-productContext.md  11-systemPatterns.md  20-context7.md
ui/.roo/rules-code/: 11-codingPatterns.md
ui/src-bex/entrypoints/background/: index.js  notificationMessenger.js  popupMessenger.js  queries.js  utils.js
ui/src-bex/entrypoints/content/: index.js
ui/src-bex/entrypoints/inpage/: MmxProvider.js  index.js
ui/src-bex/entrypoints/notification/: index.html  main.js
ui/src-bex/entrypoints/popup/: App.vue  index.html  main.js  plugins.js  routes.js  vaultApiService.js  vaultService.js  vueApp.js
ui/src-bex/messaging/: MessageHandler.js  background.js  content-script.js  content.js  messengerWrapper.js  popup.js  window.js
ui/src-bex/messaging/entrypointMessengers/: background.js  content-script.js  popup.js  window.js
ui/src-bex/messaging/utils/: MessageHandlerBase.js  callbackCleaner.js  callbackGuard.js  messengerWrapper.js  namespace.js  sendMessageWrapper.js
ui/src-bex/utils/: internalMessenger.js  notificationMessager.js  notificationMessaging.js  openNotification.js  websiteMessenger.js
ui/src/components/Dialogs/: OfferDepositDialog.vue  OfferTradeDialog.vue  PromptPassphraseDialog.vue  ShowSeedDialog.vue
ui/src/components/Explore/: BalanceTable.vue  ObjectTable.vue
ui/src/components/MainMenu/: GuiMainMenu.vue
ui/src/components/UI/: HexDump.vue  ListTable.vue  MChip.vue  WPasswordInput.vue
ui/src/components/Wallet/: TxFeeInput.vue
ui/src/composables/: useConfirmation.js  useFormValidator.js  useObjectTableExpansion.js
ui/src/composables/App/: useAppUpdateChecker.js  useWatchI18n.js  useWatchTheme.js
ui/src/composables/Node/: useChainBinaries.js  useNodeStatus.js
ui/src/helpers/: rules.js
ui/src/locales/: common.json  en-US.json  ru.json
ui/src/pages/: ErrorNotFound.vue  LoginPage.vue
ui/src/plugins/: i18n.js
ui/src/queries/: common.js
ui/src/stores/: app.js  node.js  session.js  wallet.js
ui/src/utils/: dataFormatters.js  dataFormatters.js.test.js  validateAddress.js
www/web-gui/public/: explorer.js  guiBuildInfo.json  index.html  mount.js  wallet.js
(+187 files in other folders)
